[package]
name = "lotka_volterra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simsim = { path = "../../../simsim"}
clap = { version = "3.0", features = ["derive"] }
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
